# leprac

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main_old.cpp
.github/workflows/: cmake-single-platform.yml
asset/: address.toml  link.toml  literal.toml  version.toml
asset/icon/: resource.rc  svg2ico.py
asset/le01/: frame.toml  pattern.toml
asset/le02/: frame.toml  pattern.toml
asset/le03/: frame.toml  pattern.toml
asset/style/: define.cpp  macro.py  macro.txt  user_custom_style.hpp
config/: stack.toml  version.yml
config/le02/: frame.toml  stack.toml
config/le03/: pattern.yml
doc/: draft.md  leprac-cfg.toml
hook/: CMakeLists.txt  README.md  hook_dll.cpp  injector.cpp
include/: UI.h  UI.hpp  aho_corasick.hpp  asset.h  asset.hpp  common.h  common.hpp  config.h  config.hpp  custom_style.hpp  game.h  game.hpp  launcher.h  launcher.hpp  literal.h  literal.hpp  logger.h  logger.hpp  update.hpp
module/: UI.cpp  UI.cppm  aho_corasick.cpp  asset.cpp  asset.cppm  common.cpp  common.cppm  config.cpp  config.cppm  custom_style.hpp  game.cpp  game.cppm  launcher.cpp  launcher.cppm  leprac.cpp  literal.cpp  literal.cppm  logger.cpp  logger.cppm  update.cpp  update.cppm
ref/: prac.cea
ref/EMS_RMIprac/: EMSRMIprac.txt  EMS_RMIprac F8.CT  EMS_RMIprac FC.CT  emsrmiprac_tasouken_and_pmibr_skips.txt
src/: UI.cpp  UI.h  asset.cpp  asset.h  common.cpp  config.cpp  config.h  custom_style.cpp  game.cpp  game.h  launcher.cpp  launcher.h  literal.cpp  literal.h  logBuffer.h  logger.cpp  logger.h  main.cpp  main_old.cpp  type.h  update.cpp  util.cpp  util.h
src/kiero/: CMakeLists.txt  README.md  kiero.cpp  kiero.h  main.cpp
src/kiero/examples/imgui/: README.md  main.cpp
src/kiero/examples/imgui/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
src/kiero/examples/imgui/imgui/examples/: imgui_impl_allegro5.cpp  imgui_impl_dx10.cpp  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_dx9.cpp  imgui_impl_glfw.cpp  imgui_impl_glut.cpp  imgui_impl_marmalade.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_impl_vulkan.cpp  imgui_impl_win32.cpp
src/kiero/examples/imgui/imgui/examples/libs/usynergy/: uSynergy.c
src/kiero/examples/imgui/imgui/misc/cpp/: imgui_stdlib.cpp
src/kiero/examples/imgui/imgui/misc/freetype/: imgui_freetype.cpp
src/kiero/examples/imgui/impl/: d3d10_impl.cpp  d3d10_impl.h  d3d11_impl.cpp  d3d11_impl.h  d3d9_impl.cpp  d3d9_impl.h  shared.cpp  shared.h  win32_impl.cpp  win32_impl.h
src/kiero/minhook/src/: buffer.c  hook.c  trampoline.c
src/kiero/minhook/src/hde/: hde32.c
test/: CMakeLists.txt  main.cpp
